--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,197 @@
-header {
+ /* Header Styles*/
+
+
+ header {
+  display: flex;
+  align-items: center;
+  background-color: black;
+  color: white;
+  padding: 1rem 5rem;
+  height: 3rem;
+  
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+header .logo img {
+  width: 9rem;
+  height: auto;
+ }
+
+ header nav {
+  margin-left: auto;
+ }
+ 
+header nav ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+header nav ul li a {
+  margin-left: 1rem;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: bisque;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header nav ul li a:hover {
+  background-color: chocolate;
+  color: black;
+  border-radius: 1rem;
+ }
+
+
+
+/* Rest Styles*/
+
+.foto-restaurante {
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    background-color: #f8f9fa; /* Cambia este color según tus necesidades */
-    height: 100px; /* Cambia esta altura según tus necesidades */
-    padding: 0 20px;
-  }
-  
-  .logo {
-    margin-left: 20px; /* Ajusta el margen según tus necesidades */
-  }
-  
-  nav {
-    background-color: black;
-  }
-  
-  nav ul {
+    height: 550px; 
+    margin: auto; 
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.texto {
+    position: absolute;
+    width: 100%;
+    height: 135%;
+    background-color: rgba(0, 0, 0, 0.3); 
     display: flex;
-    list-style-type: none;
-  }
-  
-  nav ul li {
-    padding: 0 20px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: white;
-  }
-  
-  .content {
-    /* Estilos para el contenido de la página */
-  }
-  
+}
+
+.texto h2{
+    margin: 10px;
+    font-size: 50px;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+} 
+
+.texto h1 {
+    margin: 10px;
+    font-size: 100px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    
+}
+.texto h3 {
+    margin: 10px;
+    font-size: 35px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+/* Concepto styles */
+
+.foto-plantas {
+  position: relative;
+  text-align: center;
+}
+
+.foto-plantas img {
+  position: relative;
+  display: block;
+  height: 645px; 
+  width: 100%; 
+  object-fit: cover;
+}
+
+.texto-concepto {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: justify;
+  background-color: black;
+  opacity: 0.9;
+  border-radius: 25px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 100px;
+}
+
+.texto-h2 {
+  text-align: center;
+  color: chocolate;  
+  position: relative;
+  letter-spacing: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.texto-h2::before, .texto-h2::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 100px;
+  height: 1px;
+  background-color: chocolate;
+}
+
+.texto-h2::before {
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.texto-h2::after {
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.border-left {
+  position: absolute;
+  top: 45px;
+  left: 230px;
+}
+
+.border-left img {
+  width: 200px;
+  height: 200px;
+}
+ .border-right {
+  position: absolute;
+  top: 400px;
+  left: 900px;
+ }
+ .border-right img {
+  height: 200px;
+  width: 200px;
+  transform: rotate(-75deg);
+ }
+
+ /* GRID */
+
+ .grid {
+  position: relative;
+  width: 100%;
+  height: 645px;
+  overflow: hidden;
+ }
+
+ .grid img {
+  width: 100%;
+  height: auto;
+ }
+
+ .grid::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+ }
+
+   
