--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
- /* Header Styles*/
+/* Header Styles*/
 
-
- header {
+header {
   display: flex;
   align-items: center;
   background-color: black;
   color: white;
   padding: 1rem 5rem;
   height: 3rem;
-  
 }
 
 .logo {
@@ -19,18 +17,17 @@
 header .logo img {
   width: 9rem;
   height: auto;
- }
+}
 
- header nav {
+header nav {
   margin-left: auto;
- }
- 
+}
+
 header nav ul {
   display: flex;
   list-style-type: none;
   padding: 0;
   margin: 0;
-
 }
 
 header nav ul li a {
@@ -38,61 +35,64 @@ header nav ul li a {
   padding: 5px 10px;
   text-decoration: none;
   color: bisque;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header nav ul li a:hover {
   background-color: chocolate;
   color: black;
   border-radius: 1rem;
- }
+}
 
-
-
-/* Rest Styles*/
+/* COVER*/
 
 .foto-restaurante {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 550px; 
-    margin: auto; 
-    overflow: hidden;
-    max-width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  margin: auto;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .texto {
-    position: absolute;
-    width: 100%;
-    height: 135%;
-    background-color: rgba(0, 0, 0, 0.3); 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
+  position: absolute;
+  width: 100%;
+  height: 135%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
-.texto h2{
-    margin: 10px;
-    font-size: 50px;
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-} 
+.texto h2 {
+  margin: 0.5rem;
+  font-size: 2.5rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.texto h1 .mozza {
+  color: chocolate;
+}
 
 .texto h1 {
-    margin: 10px;
-    font-size: 100px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-    
+  margin: 0.5rem;
+  font-size: 5rem;
+  font-family: "Dancing Script";
 }
 .texto h3 {
-    margin: 10px;
-    font-size: 35px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin: 0.5rem;
+  font-size: 1.75rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-/* Concepto styles */
+/* INFO*/
 
 .foto-plantas {
   position: relative;
@@ -102,8 +102,8 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 .foto-plantas img {
   position: relative;
   display: block;
-  height: 645px; 
-  width: 100%; 
+  height: 690px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -117,20 +117,21 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
   background-color: black;
   opacity: 0.9;
   border-radius: 25px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 100px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 5%;
 }
 
 .texto-h2 {
   text-align: center;
-  color: chocolate;  
+  color: chocolate;
   position: relative;
   letter-spacing: 10px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.texto-h2::before, .texto-h2::after {
-  content: '';
+.texto-h2::before,
+.texto-h2::after {
+  content: "";
   position: absolute;
   top: 50%;
   width: 100px;
@@ -150,40 +151,40 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 
 .border-left {
   position: absolute;
-  top: 45px;
-  left: 230px;
+  top: 10%;
+  left: 20%;
 }
 
 .border-left img {
-  width: 200px;
-  height: 200px;
+  width: 50%;
+  height: auto;
 }
- .border-right {
+.border-right {
   position: absolute;
   top: 400px;
   left: 900px;
- }
- .border-right img {
+}
+.border-right img {
   height: 200px;
   width: 200px;
   transform: rotate(-75deg);
- }
+}
 
- /* GRID */
+/* GRID */
 
- .grid {
+.grid-fondo {
   position: relative;
   width: 100%;
-  height: 645px;
+  height: 50vw;
   overflow: hidden;
- }
+}
 
- .grid img {
+.grid-fondo img {
   width: 100%;
   height: auto;
- }
+}
 
- .grid::before {
+.grid-fondo::before {
   content: "";
   position: absolute;
   top: 0;
@@ -191,7 +192,73 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
   width: 100%;
   height: 100%;
   background-color: black;
-  opacity: 0.5;
- }
+  opacity: 0.3;
+}
 
-   
+.galeria1 {
+  position: absolute;
+  top: 20%;
+  left: 14%;
+}
+
+.galeria1 img {
+  width: 40%;
+  height: auto;
+}
+
+.galeria2 {
+  position: absolute;
+  top: 60%;
+  left: 7%;
+}
+
+.galeria2 img {
+  width: 50%;
+  height: auto;
+}
+
+.galeria3 {
+  position: absolute;
+  top: 20%;
+  left: 41%;
+}
+
+.galeria3 img {
+  width: 50%;
+  height: auto;
+}
+
+.galeria4 {
+  position: absolute;
+  top: 55%;
+  left: 35%;
+}
+
+.galeria4 img {
+  width: 55%;
+  height: auto;
+}
+
+.galeria5 {
+  position: absolute;
+  top: 20%;
+  left: 75%;
+}
+
+.galeria5 img {
+  width: 50%;
+  height: auto;
+}
+
+.galeria6 {
+  position: absolute;
+  top: 50%;
+  left: 70%;
+
+}
+
+.galeria6 img {
+  width: 70%;
+  height: auto;
+}
+
