--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,6 @@ header nav ul li a:hover {
 
 .catalogo {
   padding: 10px;
-  position: absolute;
   text-align: center;
   font-family: monospace;
   font-size: larger;
@@ -316,6 +315,10 @@ header nav ul li a:hover {
   margin: 0;
 }
 
+.menu ul li {
+  margin-right: 20px;
+}
+
 .menu ul li a {
   display: block;
   padding: 5px 10px;
@@ -329,4 +332,77 @@ header nav ul li a:hover {
   background-color: chocolate;
   color: black;
   border-radius: 1rem;
+}
+
+.fondo-carta {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.fondo-carta img {
+  padding-top: 20px;
+  width: 100%;
+  height: auto;
+}
+
+.rectangulo {
+  position: absolute;
+  top: 100px;
+  bottom: 50px;
+  width: 500px;
+  background-color: white;
+}
+
+.izquierdo {
+  left: 150px;
+}
+
+.derecho {
+  right: 150px;
+}
+
+h2 {
+  margin-bottom: 20px;
+  margin-left: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.tabla-productos {
+  width: 100%;
+}
+
+.tabla-productos td {
+  padding: 25px;
+  text-align: left;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.tabla-productos .precio {
+  text-align: right;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.contenedor {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.boton {
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: black;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+.boton:hover {
+  background-color: chocolate;
 }
