--- a/styles.css
+++ b/styles.css
@@ -388,3 +388,170 @@ p {
   font-style: italic;
 }
 
+/*BLOG*/
+
+.blog-title {
+  text-align: center;
+  margin: 20px 0;
+  position: relative;
+}
+
+.blog-title h2 {
+  display: inline-block;
+  padding: 0 20px; 
+  text-transform: uppercase;
+}
+
+.blog-title::before,
+.blog-title::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 20%;
+  height: 1px;
+  background-color: #000; 
+}
+
+.blog-title::before {
+  left: 55%;
+}
+
+.blog-title::after {
+  right: 55%;
+}
+
+.grid-blog {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 60px;
+  box-sizing: border-box;
+  padding-left: 19%;
+}
+
+.grid-blog div {
+  border: 1px solid #000000;
+  text-align: center;
+  padding: 10px;
+}
+
+.grid-blog img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto; 
+}
+
+.grid-blog h2,
+.grid-blog p {
+  margin: 10px 0;
+}
+
+.grid-blog footer {
+  margin-top: 10px;
+}
+
+.grid-blog footer p {
+  margin:  0;
+}
+
+.grid-blog button {
+  margin: 0;
+}
+
+.button-container {
+  text-align: center;
+  padding: 40px;
+}
+
+
+/*CONTACTO*/
+
+.background-5 {
+  background-color: chocolate;
+  height: 50vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta según sea necesario */
+  gap: 20px; 
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
+.background-5 div,
+.background-5 a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #ffffff;
+}
+
+.background-5 img {
+  width: 200px;
+}
+
+/*redes sociales*/
+
+.background-6 {
+  background-color: black;
+  width: 100vw;
+  height: 50vh;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.redes {
+  position: relative;
+  padding: 0 10px;
+  text-transform: uppercase;
+  padding-bottom: 50px;
+}
+
+.redes::before,
+.redes::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+}
+
+.redes::before {
+  left: 140px;
+}
+
+.redes::after {
+  right: 140px;
+}
+
+button {
+  padding: 10px 100px;
+}
+
+/*FOOTER*/
+
+.footer-2 {
+  color: black;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-2 ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-2 li {
+  margin-bottom: 10px;
+}
+
